--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,11 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+Capture.PNG
+cpt_file_cpt_presentation.PNG
+CPT_forklaring.png
+Header + SND.png
+setup.py
+sluttkoder.PNG
+stein_blokk_fjell.PNG
+test_parsing.ipynb
